After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762209 - flvdemux: leaking eos event fix
flvdemux: leaking eos event fix
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal critical
: 1.6.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
1.6.4
Depends on:
Blocks:
 
 
Reported: 2016-02-17 18:45 UTC by Håvard Graff (hgr)
Modified: 2016-04-14 17:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1012 bytes, patch)
2016-02-17 18:45 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2016-02-17 18:45:47 UTC
Created attachment 321530 [details] [review]
patch

.
Comment 1 Tim-Philipp Müller 2016-02-19 14:58:44 UTC
commit 1e09e5bfe97e72cd021eb0dcc2c5bda8e4309498
Author: Havard Graff <havard.graff@gmail.com>
Date:   Fri Dec 4 00:46:12 2015 +1100

    flvdemux: fix eos event leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=762209