flvdemux: fix eos event leak

https://bugzilla.gnome.org/show_bug.cgi?id=762209